<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <!-- Esto son los margenes -->
    <include layout="@layout/margenes" />

    <!-- Esto es para nuestro fondo -->
    <ImageView
        android:id="@+id/fondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <!-- El resto de elemnetos -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="103dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="88dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ropa" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="103dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="88dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ropa" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="160dp"
        android:layout_height="103dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="88dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ropa" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color1"
        android:textSize="@dimen/texto_grande"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/derecha"
        app:layout_constraintStart_toStartOf="@id/izquierda"
        app:layout_constraintTop_toTopOf="@id/arriba" />


    <!-- Esto son los botones para las actividades -->
    <Button
        android:id="@+id/boton_novedades"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:background="@color/color3"
        android:text="@string/btn_eventos"
        app:layout_constraintEnd_toStartOf="@id/derecha"
        app:layout_constraintStart_toStartOf="@id/izquierda"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/boton_ropahombre"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/btn_Hombre"
        android:background="@color/color3"
        app:layout_constraintTop_toBottomOf="@+id/boton_novedades"
        app:layout_constraintEnd_toStartOf="@id/derecha"
        app:layout_constraintStart_toStartOf="@id/izquierda"
        tools:layout_editor_absoluteX="161dp" />

    <Button
        android:id="@+id/boton_ropamujer"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/btn_Mujeres"
        android:background="@color/color3"
        app:layout_constraintTop_toBottomOf="@+id/boton_ropahombre"
        app:layout_constraintEnd_toStartOf="@id/derecha"
        app:layout_constraintStart_toStartOf="@id/izquierda"
        tools:layout_editor_absoluteX="158dp" />

    <Button
        android:id="@+id/boton_registrate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/btn_Registrate"
        android:background="@color/color3"
        app:layout_constraintTop_toBottomOf="@+id/boton_ropamujer"
        app:layout_constraintEnd_toStartOf="@id/derecha"
        app:layout_constraintStart_toStartOf="@id/izquierda"
        tools:layout_editor_absoluteX="170dp" />

</androidx.constraintlayout.widget.ConstraintLayout>